examples/res_syntax.txt
Program: Program
  Function: sum
    Type: int
    FuncArg: a
      Type: int
    FuncArg: b
      Type: int
    FuncArg: c
      Type: int
    Block: Block
      Return: Return
        Number: 1
  Function: main
    Type: int
    Block: Block
      VarDeclList: VarDeclList
        Type: int
        VarDecl: x
          Number: 5
      VarDeclList: VarDeclList
        Type: int
        VarDecl: y
          Number: 10
      VarDeclList: VarDeclList
        Type: int
        VarDecl: z [array]
          Call: Call
            Identifier: sum
            CommaExpr: ,
              CommaExpr: ,
                Number: 1
                Number: 2
              Number: 3
      VarDeclList: VarDeclList
        Type: int
        VarDecl: val
          Index: Index
            Identifier: z
            Number: 2
      If: If
        Call: Call
          Identifier: sum
          CommaExpr: ,
            CommaExpr: ,
              Number: 0
              Number: 1
            Number: 2
        Block: Block
          ExprStmt: ExprStmt
            Assign: =
              Identifier: val
              Number: 1
      VarDeclList: VarDeclList
        Type: string
        VarDecl: ans
          String: h
      If: If
        Binary: <
          Identifier: x
          Identifier: y
        Block: Block
          VarDeclList: VarDeclList
            Type: int
            VarDecl: z
              Number: 41
          ExprStmt: ExprStmt
            Call: Call
              Identifier: sum
              CommaExpr: ,
                CommaExpr: ,
                  Number: 5
                  Number: 7
                Number: 1
        ElseIf: ElseIf
          Binary: ==
            Identifier: x
            Identifier: y
          Block: Block
            ExprStmt: ExprStmt
              Assign: =
                Identifier: x
                Number: 0
        Block: Block
          ExprStmt: ExprStmt
            Assign: =
              Identifier: x
              Number: 1
      For: For
        VarDeclList: VarDeclList
          Type: int
          VarDecl: i
            Number: 0
        Binary: <
          Identifier: i
          Number: 5
        Assign: =
          Identifier: i
          Binary: +
            Identifier: i
            Number: 1
        Block: Block
          ExprStmt: ExprStmt
            Assign: =
              Identifier: x
              Binary: +
                Identifier: x
                Identifier: i
          Break: Break
      While: While
        Binary: >
          Identifier: x
          Number: 0
        Block: Block
          ExprStmt: ExprStmt
            Assign: =
              Identifier: x
              Binary: +
                Identifier: x
                Index: Index
                  Identifier: z
                  Identifier: x
      DoWhile: DoWhile
        Block: Block
          ExprStmt: ExprStmt
            Assign: =
              Identifier: y
              Binary: -
                Identifier: y
                Number: 1
        Binary: >
          Identifier: y
          Number: 0
      Return: Return
        Identifier: x

=== No syntax errors ===
